# zephyr

./: Kconfig.zephyr  build-test.sh  setup-env.sh  west-bsim.yml
.devcontainer/: Dockerfile  devcontainer.json  devcontainer.rst
.devcontainer/bsim/: Dockerfile  devcontainer.json
.devcontainer/bsim-local/: devcontainer.json
.devcontainer/bsim/scripts/: setup-bsim.sh  setup-env.sh
.devcontainer/scripts/: setup-env.sh
boards/96boards/carbon/: Kconfig.defconfig
boards/arm/nrf52833dk_nrf52820/: nrf52833dk_nrf52820.dts
boards/arm/nrf52840dk_nrf52840/: nrf52840dk_nrf52840.dts
boards/arm/nrf5340dk_nrf5340/: nrf5340dk_nrf5340_cpunet.dts
boards/native/nrf_bsim/: nrf52_bsim.dts
boards/nordic/nrf52840dk/: nrf52840dk_nrf52840.dts
doc/develop/: devcontainer.rst
doc/releases/: migration-guide-3.6.rst  release-notes-3.1.rst
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.posix_pipe  uart_async_to_irq.c  uart_nrfx_uarte.c  uart_posix_pipe.c
include/: kernel.h  zephyr.h
include/bluetooth/: bluetooth.h
include/tracing/: tracing.h
include/zephyr/: kernel.h
kernel/: fatal.c  idle.c
samples/hello_world/: CMakeLists.txt  prj.conf
scripts/tracing/: ctf2ctf.py  parse_ctf.py
subsys/logging/: log_core.c  log_output.c
subsys/net/: buf.c
subsys/shell/: shell.c  shell_ops.c  shell_ops.h
subsys/tracing/: tracing_backend_ram.c  tracing_core.c  tracing_format_async.c  tracing_format_common.c
tests/bsim/: sh_common.source
tests/bsim/bluetooth/host/att/sequential/dut/: CMakeLists.txt  prj.conf
tests/bsim/bluetooth/host/att/sequential/dut/src/: main.c
(+351 files in other folders)
